<resources>
    <string name="app_name">R07D</string>
    <string name="app_id">757717534254589</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="title_activity_calendario">CALENDAR</string>
    <string name="sep"> _________________________O________________________</string>
    <string name="emaillabel">EMAIL:</string>
    <string name="hint">Ej: myuser@myemail.com</string>
    <string name="contrasenialab">PASSWORD:</string>
    <string name="claveejlabel">e.g:Psalm45</string>
    <string name="title_activity_recdia">DAILY RECORD</string>
    <string name="recdialabel">ACTIVIDADMAINREGDIARIODB</string>
    <string name="lecbiblilabel">Bible Reading:</string>
    <string name="hintlb">e.g: Psal 45:2, Pr 21:5\u201415, Jer 12</string>
    <string name="hiniciolabel">Initial Time:</string>
    <string name="hfinlabel">End Time:   </string>
    <string name="hablolabel">What did God tell me?</string>
    <string name="adglabel">Thanks Giving</string>
    <string name="ldnlabel">List of New</string>
    <string name="pilabel">Petitions/Intercession</string>
    <string name="plcblabel">Pastors/Leaders</string>
    <string name="cbcoordlabel">Coordinators</string>
    <string name="mdgccblabel">Group Members</string>
    <string name="cbcoodlabel">Coordinators</string>
    <string name="cbdisclabel">Disciples</string>
    <string name="cboplclabel">Prayer for the Harvest</string>
    <string name="dialabel">DAY</string>
    <string name="fechalabel">DATE</string>
    <string name="cbolabel">Went to prayer meeting?</string>
    <string name="cboilabel">Went to prayer meeting on Internet?</string>
    <string name="lbothin">Initial Time</string>
    <string name="lbhfin">End Time</string>
    <string name="guargarblabel">SAVE</string>
    <string name="breplabel">SEND REPORT</string>
    <string name="title_activity_reporte">MONTHLY REPORT</string>
    <string name="crblabel">REPORTS</string>
    <string name="nombrerep">NAME:</string>
    <string name="coordgclabel">NAME OF LEADER:</string>
    <string name="sfecha">SELECT DAY</string>
    <string name="mesanioreport">SELECT MONTH / YEAR</string>
    <string name="con">SIGN IN</string>
    <string name="regis">SIGN UP</string>
    <string name="OOO">----------------------O----------------------</string>
    <string name="mdlr">READING GOAL:</string>
    <string name="CLMR">MET THE GOAL? :</string>
    <string name="cmlm2">MET THE GOAL? :</string>
    <string name="SICLM">YES</string>
    <string name="NCLMR">NO</string>
    <string name="usuario">User</string>
    <string name="insmenu">Instructions</string>
    <string name="acerca">About R07D</string>
    <string name="title_activity_inst">INSTRUCTIONS</string>
    <string name="title_activity_about">ABOUT\.\.\.</string>
    <string name="desconectarse">SIGN OUT</string>
    <string name="twitter2">twitter2</string>
    <string name="twitter1">twitter1</string>
    <string name="inscoord"><b>Name of Leader:</b> Name of the leader or coordinator of the group to which you belong.</string>
    <string name="mdlcins"><b>Reading Goal:</b> It is a way to make an effort in order to meet a daily bible reading goal. Example: If you are going to read 2 chapters daily, the goal could be: Gn 1\u201450 and Ex 1\u201410.</string>
    <string name="clmins"><b>Met the Goal? :</b> If you met the goal within a percentage higher than 90%, mark YES. If you barely made it to 89.9% or less then mark NO. This will lead you to make a greater effort in the next month.</string>
    <string name="hihfins">"<b>Initial Time / End Time :</b> Time in which your daily session of prayer and bible reading start and end.  "</string>
    <string name="qmhDins">"<b>What did God tell me? :</b> Specific word from some verse, in accordance to a personal necessity or situation that you are going through, or a principle for your life. Also records of God given thoughts or impressions can be kept.  "</string>
    <string name="adgins"><b>Thanks Giving:</b> List of answers to prayers.Or thanks giving while awaiting for something specific.</string>
    <string name="ldnins"><b>List of New:</b> List of people that you want them to meet Jesus and get to know him.</string>
    <string name="peiins"><b>Petitions/Intercession:</b> The 5 predefined options are only a few we should pray for. Additionally write your own petitions.</string>
    <string name="r07dabout">R07D Ver:2.2  © 2013 </string>
    <string name="autoresabout">By XoaquinSoft © 2013</string>
    <string name="r07dspalsh">R07D</string>
    <string name="BYJ">by XoaquinSoft</string>
    <string name="title_activity_calendario_activity2">CALENDAR</string>
    <string name="title_activity_muro">WALL</string>
    <string name="muro">WALL R07D</string>
    <string name="pubmuro">Publish P&amp;TG on the Wall</string>
    <string name="dev">DEVOTIONALS</string>
    <string name="title_activity_nivel">NivelActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="titlenivel">R07D LEVEL</string>
    <string name="title_activity_niveles">NivelesActivity</string>
    <string name="puntaje">TOTAL SCORE</string>
     <string name="puntajem">Score</string>
    <string name="pun">1000</string>
    <string name="hash">#</string>
    <string name="ol">Forgot Password?</string>
    <string name="title_activity_jalert">JalertActivity</string>
    <string name="reg">RECORD</string>
    <string name="devo">DEVOTIONAL</string>
    <string name="title_activity_recdia_activity2">DAILY RECORD</string>
    <string name="tbtext">P/TG/LON</string>
    <string name="pub"><b>Publish P&amp;TG on The Wall:</b> Publish petitions and thanks giving messages on the wall of the R07D community. Also on the Wall, if you press and hold over a certain Petition or TGM, you can send a customized email regarding the matter to the person who published it.</string>
    <string name="lec">Reading:</string>
    <string name="COMP">Share</string>
    <string name="mur">R07D Wall</string>
    <string name="env">SEND</string>
    <string name="title_activity_recdia_activity3">RecdiaActivity3</string>
    <string name="ene">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="abr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="ago">August</string>
    <string name="sept">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dic">December</string>
    <string name="lun">MON</string>
    <string name="mart">TUE</string>
    <string name="mie">WED</string>
    <string name="jue">THU</string>
    <string name="vie">FRI</string>
    <string name="sab">SAT</string>
    <string name="dom">SUN</string>
    <string name="regr">RECORD</string>
    <string name="devr">DEVOTIONAL</string>
    <string name="nlun">Monday</string>
    <string name="nmart">Tuesday</string>
    <string name="nmie">Wednesday</string>
    <string name="njue">Thursday</string>
    <string name="nvie">Friday</string>
    <string name="nsab">Saturday</string>
    <string name="ndom">Sunday</string>
    <string name="mesr">MONTH</string>
    <string name="anior">YEAR</string>
    <string name="shr">R07 On The Go! Do your R07 anywhere! Download the App R07D at: https://play.google.com/store/apps/details?id=com.xoaquin.r07d</string>
    <string name="stg">If you lilke </string>
    <string name="tus"> please take a second to rate it. Thanks for your support! </string>
    <string name="comps">Share It!</string>
    <string name="rr">Rate </string>
    <string name="rl">Remind me later..</string>
    <string name="nt">No, thanks</string>
    <string name="jal">Remember this is the day that the Lord has made for us to share the R07D Report with a leader/friend/family member/ourselves!</string>
    <string name="jal2">Blessings!</string>
    <string name="okr">SHARE</string>
    <string name="latr">LATER</string>
    <string name="atg">(TG)</string>
    <string name="ncon">No Connection</string>
    <string name="nconhtml">No Connection</string>
    <string name="conn">Connecting</string>
    <string name="uce">Wrong User/Password</string>
    <string name="uce2">Try Again</string>
    <string name="uec">User Exists</string>
    <string name="uec2">Connect</string>
    <string name="rex">Successful Sign Up</string>
    <string name="iecv">Enter a Valid Email and Password</string>
    <string name="esrp">Sent Email to reset Password</string>
    <string name="augu">Auto-Save</string>
    <string name="actu">Updating</string>
    <string name="guard">Saving</string>
    <string name="grep">Generating Report</string>
    <string name="reph">REPORT:</string>
    <string name="namh">NAME:</string>
    <string name="nol">NAME OF LEADER:</string>
    <string name="rgoa">READING GOAL:</string>
    <string name="mtgo">MET THE GOAL?: NO</string>
    <string name="mtgoy">MET THE GOAL?: YES</string>
    <string name="tpm">HOW MANY TIMES DID I GO TO PRAYER MEETING?</string>
    <string name="tpmi">HOW MANY TIMES DID I GO TO PRAYER MEETING ON INTERNET?</string>
    <string name="pyl">Leaders and Pastors</string>
    <string name="coordi">Coordinators</string>
    <string name="mgcon">Group Members</string>
    <string name="discl">Disciples</string>
    <string name="harv">The Harvest</string>
    <string name="pfor">PRAYING FOR:</string>
    <string name="hinim">INITIAL TIME</string>
    <string name="hfinm">END TIME</string>
    <string name="brmay">BIBLE READING</string>
    <string name="qmhdma">WHAT DID GOD TELL ME?</string>
    <string name="tgma">THANKS GIVING</string>
    <string name="lonma">LIST OF NEW</string>
    <string name="pinma">PETITIONS/INTERCESSION</string>
    <string name="rgr07">Report Generated By R07D</string>
    <string name="rmsub">R07D MONTHLY REPORT:</string>
    <string name="rmtext">ATTACHED R07D REPORT</string>
    <string name="trpdf">R07D REPORT</string>
    <string name="ucons">Under Construction</string>
    <string name="caa">Do you know someone that would collaborate with this section with a daily devotional?</string>
    <string name="wtm">Contact Me</string>
    <string name="ikso">I KNOW SOMEONE THAT WOULD COLLABORATE WITH A DEVOTIONAL FOR R07D</string>
    <string name="nodev">No</string>
    <string name="comreg">COMMENT REGARDING</string>
    <string name="or07w">ON R07D WALL</string>
    <string name="lampp">Your word is a lamp to guide my feet and a light for my path</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_noti">NotiActivity</string>
    <string name="offmode">Offline Mode</string>
    <string name="devnotsup">This device is not supported.</string>
    <string name="gpsmustbeins">Google Play Services must be installed.</string>
    <string name="shrscoresub">SHARING R07D\'S SCORE</string>
    <string name="shrscoretext">This is my #R07D Score, What\'s yours?.. http://bit.ly/1lN7aSl</string>
    <string name="shrnoti">Share with</string>
    <string name="punp">You\u0027ve made a good effort this month, keep going! Blessings!</string>
    <string name="punp2">(Monthly Level: R07D Beginner) Points: </string>
    <string name="punm">You\u0027ve done a good work this month, keep going! Blessings!</string>
    <string name="punm2">(Monthly Level: R07D Intermediate) Points: </string>
    <string name="puna">You\u0027ve done an excellent work this month, keep going! Blessings!</string>
    <string name="puna2">(Monthly Level: R07D Advanced) Points: </string>
    <string name="widgettit">R07D wdGtm?</string>
    <string name="mtl">Meet the Lord in the Secret&#8230;</string>
</resources>