
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffe2d8"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/inscoord"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/mdlcins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/clmins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/hihfins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/qmhDins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/adgins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/ldnins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/peiins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#8d665f"
        android:textSize="15sp" />

</LinearLayout>
</ScrollView>
