




<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_weight="1"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialabel"
            android:textSize="22sp" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:text="@string/fechalabel"
      android:textSize="22sp" />
    
         </LinearLayout>
        
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:orientation="horizontal" >

               <Button
                   android:id="@+id/button1"
                   style="?android:attr/buttonStyleSmall"
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="@dimen/activity_horizontal_margin"
                   android:layout_weight="2"
                   android:background="@drawable/b1"
                   android:onClick="onclickhorainiciob"
                   android:text="@string/lbothin"
                   android:textColor="#ffffff"
                   android:textSize="22sp" />

               <Button
                   android:id="@+id/button4"
                   style="?android:attr/buttonStyleSmall"
                   android:layout_width="50dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:visibility="invisible" />

               <Button
                   android:id="@+id/button2"
                   style="?android:attr/buttonStyleSmall"
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="@dimen/activity_horizontal_margin"
                   android:layout_weight="2"
                   android:background="@drawable/b1"
                   android:onClick="onclickhorafinb"
                   android:text="@string/lbhfin"
                   android:textColor="#ffffff"
                   android:textSize="22sp" />

           </LinearLayout>
          
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecbiblilabel"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintlb"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>

    
         </LinearLayout>
    
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:text="@string/hablolabel"
             android:textSize="22sp" />

         <EditText
             android:id="@+id/editText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine"
             android:textSize="16sp" />

         <CheckBox
             android:id="@+id/checkBox6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:text="@string/cbolabel"
             android:textSize="22sp" />
   
  <CheckBox
      android:id="@+id/checkBox7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cboilabel"
      android:textSize="22sp" />

  <ProgressBar
      android:id="@+id/progressBar1"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|center_horizontal"
      android:layout_weight="1"
      android:maxHeight="40dp"
      android:maxWidth="40dp"
      android:minHeight="30dp"
      android:minWidth="30dp"
      android:visibility="invisible" />
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/adglabel"
             android:textSize="22sp" />

         <EditText
             android:id="@+id/editText3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine"
             android:textSize="16sp" />
      
    </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ldnlabel"
             android:textSize="22sp" />

         <EditText
             android:id="@+id/editText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine"
             android:textSize="16sp" />
      
    </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1" >
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pilabel"
             android:textSize="22sp" />

         <EditText
             android:id="@+id/editText5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine"
             android:textSize="16sp" />
      
    </LinearLayout>
      
     
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1" >

  <CheckBox
      android:id="@+id/checkBox1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/plcblabel"
      android:textSize="20sp" />
        
  <CheckBox
      android:id="@+id/checkBox2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cbcoordlabel"
      android:textSize="20sp" />
  
    </LinearLayout>

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1" >

  <CheckBox
      android:id="@+id/checkBox3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/mdgccblabel"
      android:textSize="20sp" />
  
    </LinearLayout>
    
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_horizontal_margin"
          android:layout_weight="1" >

  <CheckBox
      android:id="@+id/checkBox4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cbdisclabel"
      android:textSize="20sp" />
        
  <CheckBox
      android:id="@+id/checkBox5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cboplclabel"
      android:textSize="20sp" />
  
    </LinearLayout>
      
<Button
    android:id="@+id/button3"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_weight="1"
    android:background="@drawable/b1"
    android:onClick="onclickguardar"
    android:text="@string/guargarblabel"
    android:textColor="#ffffff"
    android:textSize="22sp" />

</LinearLayout>


</ScrollView>


 


