<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe2d8"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r07dabout"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8d665f"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/autoresabout"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8d665f"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/t2"
        android:text="@string/twitter1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/t2"
        android:text="@string/twitter2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

</LinearLayout>