
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffe2d8"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nombrerep"
             android:textColor="#8d665f"
             android:textSize="22sp"
             android:textStyle="bold" />
         
          <EditText
              android:id="@+id/editText1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textPersonName"
              android:textColor="#8d665f"
              android:textSize="16sp" >

        <requestFocus />
    </EditText>
         
         
    </LinearLayout>
    
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/coordgclabel"
            android:textColor="#8d665f"
            android:textSize="22sp"
            android:textStyle="bold" />
   
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#8d665f"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/mdlr"
        android:textColor="#8d665f"
        android:textSize="22sp"
        android:textStyle="bold" />
         
          <EditText
              android:id="@+id/editText5"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textPersonName"
              android:textColor="#8d665f"
              android:textSize="16sp" >
        
    </EditText>
         
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/cmlm2"
             android:textColor="#8d665f"
             android:textSize="22sp"
             android:textStyle="bold" />

         <RadioGroup
             android:id="@+id/radioSINO"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
   
   <RadioButton
       android:id="@+id/radioButton1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:shadowColor="#8d665f"
       android:text="@string/SICLM"
       android:textColor="#8d665f"
       android:textColorLink="#8d665f"
       android:textSize="22sp"
       android:textStyle="bold" />

         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/NCLMR"
             android:textColor="#8d665f"
             android:textSize="22sp"
             android:textStyle="bold" />
 
    </RadioGroup>
                
         
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8d665f" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8d665f" />

    <Button
        android:id="@+id/button2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@drawable/b1"
        android:onClick="onclickma"
        android:text="@string/mesanioreport"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/b1"
        android:onClick="onclickcreandorep"
        android:text="@string/breplabel"
        android:textColor="#ffffff"
        android:textSize="22sp" />

</LinearLayout>
</ScrollView>