<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe2d8"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/adglabel"
        android:textAlignment="center"
        android:textColor="#8d665f" />
    <TextView
        android:id="@+id/textViewt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/adglabel"
        android:textAlignment="center"
        android:textColor="#8d665f" />

    <TextView
        android:id="@+id/textViewtxt1NEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#8d665f"
        android:textSize="50sp" />
    
     <TextView
        android:id="@+id/textViewtxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/puntaje"
        android:textColor="#8d665f"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:background="@drawable/s"
        android:onClick="onclicksharepoints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:background="#8d665f"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="100sp" />

</LinearLayout>